fix z-index

--- a/Tutorials HTML CSS - F8/Tutorials/assets/css/main.css
+++ b/Tutorials HTML CSS - F8/Tutorials/assets/css/main.css
@@ -822,7 +822,7 @@
     left: 0;
     box-shadow: 2px 2px rgba(221, 220, 220, 0.6);
     display: none;
-    z-index: 1;
+    z-index: 2;
 }
 
 .header__search-history-heading {
